name:                texcached
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable texcached
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-html >= 0.8.0.2
                     , hedis >= 0.6.5
                     , lifted-base >= 0.2.3.6
                     , scotty
                     , shakespeare >= 2.0.5
                     , stm >= 2.4.4
                     , text >= 1.2.0.6
                     , transformers >= 0.3.0.0
                     , ttrie >= 0.1.2
                     , unordered-containers >= 0.2.5.1
                     , wai >= 3.0.3.0
--                     , wai-middleware-cache
--                     , wai-middleware-cache-redis
                     , shelly
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
